--- a/kuberesources/resources.yaml
+++ b/kuberesources/resources.yaml
@@ -24,16 +24,31 @@ spec:
         app: gesturerecognition
     spec:
       containers:
-        - image: mansong/gesturerecognition:1.0.1
+        - image: mansong/gesturerecognition:1.2.0
           name: gesturerecognition
           ports:
             - containerPort: 80
+          volumeMounts:
+            - mountPath: /etc/nginx
+              name: nginx-conf
+              readOnly: true
+            - mountPath: /var/log/nginx
+              name: log
           env:
             - name: REACT_APP_API_KEY
               valueFrom:
                 secretKeyRef:
                   name: gesturerecognition-secrets
                   key: api.key
+      volumes:
+      - name: nginx-conf
+        configMap:
+          name: nginx-conf # place ConfigMap `nginx-conf` on /etc/nginx
+          items:
+            - key: nginx.conf
+              path: nginx.conf
+      - name: log
+        emptyDir: {}
 
 ---
 
