--- a/kuberesources/configmap.yaml
+++ b/kuberesources/configmap.yaml
@@ -4,36 +4,22 @@ metadata:
   name: nginx-conf
 data:
   nginx.conf: |
-    user nginx;
-    worker_processes  3;
-    error_log  /var/log/nginx/error.log;
-    events {
-      worker_connections  10240;
-    }
-    http {
-      log_format  main
-              'remote_addr:$remote_addr\t'
-              'time_local:$time_local\t'
-              'method:$request_method\t'
-              'uri:$request_uri\t'
-              'host:$host\t'
-              'status:$status\t'
-              'bytes_sent:$body_bytes_sent\t'
-              'referer:$http_referer\t'
-              'useragent:$http_user_agent\t'
-              'forwardedfor:$http_x_forwarded_for\t'
-              'request_time:$request_time';
-      access_log	/var/log/nginx/access.log main;
-      server {
+    server {
           listen       80;
-          server_name  _;
+          server_name  localhost;
+          
           location / {
-              root   html;
+              root   /usr/share/nginx/html;
+              add_header 'Access-Control-Allow-Origin' '*';
+              add_header 'Access-Control-Max-Age' 1728000;
+              add_header 'Content-Type' 'text/plain; charset=utf-8';
+              add_header 'Content-Length' 0;
+              add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS'; 
               index  index.html index.htm;
-              add_header 'Access-Control-Allow-Origin' "$http_origin";
-              add_header 'Access-Control-Allow_Credentials' 'true';
-              add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range, X-CSRF-Token';
-              add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH';
           }
-      }
+          location /health
+          {
+              return 200 '{"message": "healthy"}';
+              add_header Content-Type application/json;
+          }
     }
