--- a/kuberesources/configmap.yaml
+++ b/kuberesources/configmap.yaml
@@ -1,25 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: nginx-conf
+  name: gesturerecognition-conf
 data:
-  nginx.conf: |
-    server {
-          listen       80;
-          server_name  localhost;
-          
-          location / {
-              root   /usr/share/nginx/html;
-              add_header 'Access-Control-Allow-Origin' '*';
-              add_header 'Access-Control-Max-Age' 1728000;
-              add_header 'Content-Type' 'text/plain; charset=utf-8';
-              add_header 'Content-Length' 0;
-              add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS'; 
-              index  index.html index.htm;
-          }
-          location /health
-          {
-              return 200 '{"message": "healthy"}';
-              add_header Content-Type application/json;
-          }
-    }
+  harness.debug: 'false'
+  harness.target: 'Harness'
+  harness.identifier: 'Harness'
+  harness.email_attr: 'martin.ansong@harness.io'
