--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
     "react-webcam": "^5.2.4",
+    "upgrade": "^1.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
