--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,10 +1,4 @@
-FROM node:16.5.0-alpine3.14 AS build
-WORKDIR /app
-ENV PATH /app/node_modules/.bin:$PATH
-COPY package*.json ./
-RUN npm ci
-COPY . ./
-RUN npm run build
-
-FROM nginx:alpine as final
-COPY --from=build /app/build /usr/share/nginx/html
+FROM nginx:alpine
+COPY default.conf /etc/nginx/conf.d/default.conf
+COPY build /usr/share/nginx/html/
+EXPOSE 80
