update connector ref

--- a/harness/.harness/reactjs.yaml
+++ b/harness/.harness/reactjs.yaml
@@ -4,7 +4,7 @@ pipeline:
     projectIdentifier: mansongff
     orgIdentifier: default
     tags:
-        node: "16.5"
+        node: 16.5
         react: 17.0.2
         tensorflowjs: 3.7.0
         featureflags: ""
@@ -192,7 +192,7 @@ pipeline:
                       infrastructureDefinition:
                           type: KubernetesDirect
                           spec:
-                              connectorRef: mansong_gke
+                              connectorRef: mansong-gke
                               namespace: staging
                               releaseName: gesturerecognition
                       allowSimultaneousDeployments: true
@@ -265,7 +265,7 @@ pipeline:
                       infrastructureDefinition:
                           type: KubernetesDirect
                           spec:
-                              connectorRef: mansong_gke
+                              connectorRef: mansong-gke
                               namespace: production
                               releaseName: gesturerecognition
                       allowSimultaneousDeployments: false
