--- a/harness/.harness/reactjs.yaml
+++ b/harness/.harness/reactjs.yaml
@@ -4,9 +4,9 @@ pipeline:
     projectIdentifier: mansongff
     orgIdentifier: default
     tags:
-        node: 16.5
-        react: 17.0.2
-        tensorflowjs: 3.7.0
+        node: "16.5"
+        react: "17.0.2"
+        tensorflowjs: "3.7.0"
         featureflags: ""
     properties:
         ci:
