--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,4 +1,3 @@
 FROM nginx:alpine
 COPY default.conf /etc/nginx/conf.d/default.conf
-COPY build /usr/share/nginx/html/
-EXPOSE 80
+COPY ./build /usr/share/nginx/html
