update type to LoadBalancer

--- a/manifests/dev/resources.yaml
+++ b/manifests/dev/resources.yaml
@@ -85,7 +85,7 @@ kind: Service
 metadata:
     name: gesturerecognition-svc
 spec:
-  type: {{ .Values.serviceType }}
+  type: LoadBalancer
   selector:
     app: gesturerecognition
   ports:
