--- a/manifests/ingress.yaml
+++ b/manifests/ingress.yaml
@@ -5,25 +5,16 @@ metadata:
     kubernetes.io/tls-acme: "true"
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: "mansong-letsencrypt-staging"
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
     nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/cors-expose-headers: "*"
-    nginx.ingress.kubernetes.io/server-snippet: |
-      proxy_set_header X-Forwarded-Proto http;
-      add_header Strict-Transport-Security max-age=31536000;
-      add_header X-Frame-Options SAMEORIGIN always;
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      proxy_set_header X-Forwarded-Host $http_host;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection '';
-      proxy_cache off;
-      chunked_transfer_encoding off;
+    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
+    nginx.ingress.kubernetes.io/cors-allow-methods: "GET,OPTIONS,POST,PUT"
+    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /
   name: mansong-ingress-resource
   namespace: staging
 spec:
   tls:
-  - hosts: 
+  - hosts:
     - mansong.ff-demo.co.uk
     secretName: mansong-staging-cert
   rules:
