--- a/manifests/dev/resources.yaml
+++ b/manifests/dev/resources.yaml
@@ -31,7 +31,7 @@ spec:
             - containerPort: 80
           resources:
             limits:
-              cpu: 1
+              cpu: "2.0"
               memory: 8Gi
             requests:
               cpu: 500m
