--- a/manifests/dev/configmap.yaml
+++ b/manifests/dev/configmap.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: gesturerecognition-conf
 data:
-  harness.debug: 'false'
+  harness.debug: 'true'
   harness.target: 'Harness'
   harness.identifier: 'Harness'
   harness.email_attr: 'martin.ansong@harness.io'
