--- a/manifests/ingress.yaml
+++ b/manifests/ingress.yaml
@@ -5,12 +5,10 @@ metadata:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: "mansong-letsencrypt-staging"
     nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
-    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
+    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
     nginx.ingress.kubernetes.io/configuration-snippet: |
-      add_header Access-Control-Allow-Methods "POST, GET, OPTIONS";
-      add_header Access-Control-Allow-Credentials true;
+      more_set_headers "Access-Control-Allow-Origin: $http_origin";
   name: mansong-ingress-resource
   namespace: staging
 spec:
