--- a/harness/.harness/reactjs.yaml
+++ b/harness/.harness/reactjs.yaml
@@ -4,7 +4,7 @@ pipeline:
     projectIdentifier: mansongff
     orgIdentifier: default
     tags:
-        node: "16.6.2"
+        node: 16.6.2
         react: 17.0.2
         tensorflowjs: 3.7.0
         featureflags: ""
@@ -122,7 +122,7 @@ pipeline:
                                     tags:
                                         - latest
                                         - <+pipeline.sequenceId>
-                                    dockerfile: Dockerfile.dev
+                                    dockerfile: Dockerfile.prod
                                     context: ./
                                     optimize: true
                                     resources:
