--- a/default.conf
+++ b/default.conf
@@ -8,6 +8,11 @@ server
                 root   /usr/share/nginx/html;
                 index  index.html index.htm;
 
+                proxy_redirect off;
+                proxy_set_header Host $host;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_hide_header 'Access-Control-Allow-Origin'
+
                 if ($request_method = 'OPTIONS') {
                     add_header 'Access-Control-Allow-Origin' '*';
                     add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
