--- a/default.conf
+++ b/default.conf
@@ -7,6 +7,8 @@ server
             {
                 root   /usr/share/nginx/html;
                 index  index.html index.htm;
+                
+                add_header Access-Control-Allow-Origin *;
             }
         location /health
             {
