--- a/default.conf
+++ b/default.conf
@@ -2,15 +2,30 @@ server
 {
     listen       80;
     server_name  localhost;
-    location / 
+
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    ##
+    # Logging Settings
+    ##
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
+
+    location /
         {
             root   /usr/share/nginx/html;
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Max-Age' 1728000;
-            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Content-Type' 'application/json' 'text/plain; charset=utf-8';
             add_header 'Content-Length' 0;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS'; 
             index  index.html index.htm;
+
         }
     location /health
         {
