add static ACLs

--- a/default.conf
+++ b/default.conf
@@ -7,7 +7,9 @@ server
         {
             root   /usr/share/nginx/html;
             include /etc/nginx/mime.types;
-            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Origin' 'https://mansong.ff-demo.co.uk';
+            add_header 'Access-Control-Allow-Origin' 'http://mansong.ff-demo.co.uk';
+            add_header 'Access-Control-Allow-Origin' 'localhost:80';
             add_header 'Access-Control-Max-Age' 1728000;
 
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS'; 
@@ -17,6 +19,7 @@ server
             access_log /var/log/nginx/access.log;
 
         }
+
     location /health
         {
             return 200 '{"message": "healthy"}';
