--- a/default.conf
+++ b/default.conf
@@ -7,8 +7,8 @@ server
         {
             root   /usr/share/nginx/html;
             include /etc/nginx/mime.types;
-            add_header 'Access-Control-Allow-Origin' 'https://mansong.ff-demo.co.uk';
-            add_header 'Access-Control-Allow-Origin' 'http://mansong.ff-demo.co.uk';
+            add_header 'Access-Control-Allow-Origin' 'https://mansong.ff-demo.co.uk/';
+            add_header 'Access-Control-Allow-Origin' 'http://mansong.ff-demo.co.uk/';
             add_header 'Access-Control-Allow-Origin' 'localhost:80';
             add_header 'Access-Control-Max-Age' 1728000;
 
