--- a/manifests/dev/ingress.yaml
+++ b/manifests/dev/ingress.yaml
@@ -8,7 +8,7 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
     nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
-    nginx.ingress.kubernetes.io/cors-allow-origin: "https://mansong.ff-demo.co.uk"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "https://mansong.ff-demo.co.uk/"
     nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type,Authorization"
   name: mansong-ingress-resource
   namespace: staging
