--- a/default.conf
+++ b/default.conf
@@ -7,12 +7,11 @@ server
         {
             root   /usr/share/nginx/html;
             include /etc/nginx/mime.types;
-            add_header 'Access-Control-Allow-Origin' 'https://mansong.ff-demo.co.uk/';
-            add_header 'Access-Control-Allow-Origin' 'http://mansong.ff-demo.co.uk/';
+            add_header 'Access-Control-Allow-Origin' 'https://mansong.ff-demo.co.uk';
             add_header 'Access-Control-Allow-Origin' 'localhost:80';
             add_header 'Access-Control-Max-Age' 1728000;
-
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS'; 
+            add_header Content-Type application/json;
+            add_header 'Access-Control-Allow-Methods' 'GET, PUT, POST, DELETE, HEAD, OPTIONS'; 
             index  index.html index.htm;
 
             error_log /var/log/nginx/error.log;
