revert header change and add new headers

--- a/default.conf
+++ b/default.conf
@@ -10,8 +10,8 @@ server
             add_header 'Access-Control-Allow-Origin' 'https://mansong.ff-demo.co.uk';
             add_header 'Access-Control-Allow-Origin' 'localhost:80';
             add_header 'Access-Control-Max-Age' 1728000;
-            add_header Content-Type application/json;
-            add_header 'Access-Control-Allow-Methods' 'GET, PUT, POST, DELETE, HEAD, OPTIONS'; 
+            add_header 'Access-Control-Allow-Methods' 'GET, PUT, POST, DELETE, HEAD, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'Origin,Content-Type,Accept,Cache-Control,Authorization,api-key';
             index  index.html index.htm;
 
             error_log /var/log/nginx/error.log;
