--- a/default.conf
+++ b/default.conf
@@ -11,7 +11,8 @@ server
             add_header 'Access-Control-Allow-Origin' 'localhost:80';
             add_header 'Access-Control-Max-Age' 1728000;
             add_header 'Access-Control-Allow-Methods' 'GET, PUT, POST, DELETE, HEAD, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'Origin,Content-Type,Accept,Cache-Control,Authorization,api-key';
+            add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Cache-Control, Authorization';
+            add_header 'Access-Control-Allow-Credentials' 'true';
             index  index.html index.htm;
 
             error_log /var/log/nginx/error.log;
