set origin to *

--- a/default.conf
+++ b/default.conf
@@ -7,9 +7,7 @@ server
         {
             root   /usr/share/nginx/html;
             include /etc/nginx/mime.types;
-            add_header 'Access-Control-Allow-Origin' 'https://mansong.ff-demo.co.uk';
-            add_header 'Access-Control-Allow-Origin' 'localhost:80';
-            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, PUT, POST, DELETE, HEAD, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Cache-Control, Authorization';
             add_header 'Access-Control-Allow-Credentials' 'true';
