--- a/default.conf
+++ b/default.conf
@@ -7,14 +7,23 @@ server
         {
             root   /usr/share/nginx/html;
             include /etc/nginx/mime.types;
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, PUT, POST, DELETE, HEAD, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Cache-Control, Authorization';
-            add_header 'Access-Control-Allow-Credentials' 'true';
+            
             index  index.html index.htm;
-
             error_log /var/log/nginx/error.log;
             access_log /var/log/nginx/access.log;
+
+            # Simple requests
+            if ($request_method ~* "(GET|POST)") {
+                add_header "Access-Control-Allow-Origin"  *;
+            }
+
+            # Preflighted requests
+            if ($request_method = OPTIONS ) {
+                add_header "Access-Control-Allow-Origin"  *;
+                add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD";
+                add_header "Access-Control-Allow-Headers" "Authorization, Origin, X-Requested-With, Content-Type, Accept";
+                return 200;
+            }
 
         }
 
