--- a/manifests/dev/ingress.yaml
+++ b/manifests/dev/ingress.yaml
@@ -7,6 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
+    nginx.ingress.kubernetes.io/service-upstream : "true"
     nginx.ingress.kubernetes.io/configuration-snippet: |
       if ($http_origin ~* "https.?:\/\/(.*\.)?(mansong|ff-demo\.co\.uk).*$") {
         add_header "Access-Control-Allow-Origin" "$http_origin" always;
