--- a/manifests/dev/ingress.yaml
+++ b/manifests/dev/ingress.yaml
@@ -9,12 +9,10 @@ metadata:
     nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
     nginx.ingress.kubernetes.io/service-upstream : "true"
     nginx.ingress.kubernetes.io/configuration-snippet: |
-      if ($http_origin ~* "https.?:\/\/(.*\.)?(mansong|ff-demo\.co\.uk).*$") {
-        add_header "Access-Control-Allow-Origin" "$http_origin" always;
+        add_header "Access-Control-Allow-Origin" "*" always;
         add_header "Access-Control-Allow-Methods" "GET, PUT, POST, OPTIONS" always;
         add_header "Access-Control-Allow-Headers" "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization" always;
         add_header "Access-Control-Expose-Headers" "Content-Length,Content-Range" always;
-      }
   name: mansong-ingress-resource
   namespace: staging
 spec:
