remove quotes and always

--- a/manifests/dev/ingress.yaml
+++ b/manifests/dev/ingress.yaml
@@ -9,10 +9,9 @@ metadata:
     nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
     nginx.ingress.kubernetes.io/service-upstream : "true"
     nginx.ingress.kubernetes.io/configuration-snippet: |
-        add_header "Access-Control-Allow-Origin" "*" always;
-        add_header "Access-Control-Allow-Methods" "GET, PUT, POST, OPTIONS" always;
-        add_header "Access-Control-Allow-Headers" "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization" always;
-        add_header "Access-Control-Expose-Headers" "Content-Length,Content-Range" always;
+        add_header Access-Control-Allow-Origin *;
+        add_header Access-Control-Allow-Methods "GET, PUT, POST, OPTIONS";
+        add_header Access-Control-Allow-Headers "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization";
   name: mansong-ingress-resource
   namespace: staging
 spec:
