--- a/default.conf
+++ b/default.conf
@@ -5,25 +5,27 @@ server
 
     location /
         {
+
+            add_header "Access-Control-Allow-Origin" "*";
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
+
+
+            if ($request_method = 'OPTIONS') {
+                # Tell client that this pre-flight info is valid for 20 days
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+
             root   /usr/share/nginx/html;
             include /etc/nginx/mime.types;
             
             index  index.html index.htm;
             error_log /var/log/nginx/error.log;
             access_log /var/log/nginx/access.log;
-
-            # Simple requests
-            if ($request_method ~* "(GET|POST)") {
-                add_header "Access-Control-Allow-Origin"  *;
-            }
-
-            # Preflighted requests
-            if ($request_method = OPTIONS ) {
-                add_header "Access-Control-Allow-Origin"  *;
-                add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD";
-                add_header "Access-Control-Allow-Headers" "Authorization, Origin, X-Requested-With, Content-Type, Accept";
-                return 200;
-            }
 
         }
 
