--- a/harness/.harness/reactJS.yaml
+++ b/harness/.harness/reactJS.yaml
@@ -61,4 +61,17 @@ pipeline:
                                           image: pipelinecomponents/eslint
                                           command: eslint .
                                           privileged: false
+                          - step:
+                                type: Run
+                                name: Install Dependencies
+                                identifier: Install_Dependencies
+                                spec:
+                                    connectorRef: mansongdockerhub
+                                    image: node:16.5.0-alpine3.14
+                                    command: npm install
+                                    privileged: false
+                                    resources:
+                                        limits:
+                                            memory: 1Gi
+                                            cpu: "1"
               variables: []
