--- a/harness/.harness/reactJS.yaml
+++ b/harness/.harness/reactJS.yaml
@@ -126,3 +126,66 @@ pipeline:
                                     command: trivy image mansong/gesturerecognition:<+pipeline.sequenceId>
                                     privileged: false
               variables: []
+        - stage:
+              name: Deploy To Dev
+              identifier: Deploy_To_Dev
+              description: ""
+              type: Deployment
+              spec:
+                  serviceConfig:
+                      serviceRef: gesturerecognition
+                      serviceDefinition:
+                          type: Kubernetes
+                          spec:
+                              variables: []
+                              manifests:
+                                  - manifest:
+                                        identifier: dev
+                                        type: K8sManifest
+                                        spec:
+                                            store:
+                                                type: Github
+                                                spec:
+                                                    connectorRef: mansonggithub
+                                                    gitFetchType: Branch
+                                                    paths:
+                                                        - manifests/dev/configmap.yaml
+                                                        - manifests/dev/resources.yaml
+                                                        - manifests/dev/ingress.yaml
+                                                        - manifests/dev/cert.yaml
+                                                    repoName: improved-happiness
+                                                    branch: main
+                                            skipResourceVersioning: false
+                  infrastructure:
+                      environmentRef: dev
+                      infrastructureDefinition:
+                          type: KubernetesDirect
+                          spec:
+                              connectorRef: mansonggke
+                              namespace: staging
+                              releaseName: release-<+INFRA_KEY>
+                      allowSimultaneousDeployments: true
+                  execution:
+                      steps:
+                          - step:
+                                name: Rollout Deployment
+                                identifier: rolloutDeployment
+                                type: K8sRollingDeploy
+                                timeout: 10m
+                                spec:
+                                    skipDryRun: false
+                      rollbackSteps:
+                          - step:
+                                name: Rollback Rollout Deployment
+                                identifier: rollbackRolloutDeployment
+                                type: K8sRollingRollback
+                                timeout: 10m
+                                spec: {}
+                  serviceDependencies: []
+              tags: {}
+              failureStrategies:
+                  - onFailure:
+                        errors:
+                            - AllErrors
+                        action:
+                            type: StageRollback
